# livaria

./: .env_exemplo  README.md  db.sqlite3  livraria_bkp.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py  models.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_autor_livro.py  0003_rename_name_autor_nome.py  0004_rename_name_editora_nome.py  0005_compra.py  0006_itenscompra.py  0007_itenscompra_preco_item.py  0008_compra_data.py  0009_compra_tipo_pagamento.py
livraria/models/: autor.py  categoria.py  compra.py  editora.py  livro.py
livraria/serializers/: __init__.py  compra.py  livro.py
livraria/views/: autor.py  categoria.py  compra.py  editora.py  livro.py
uploader/migrations/: 0001_initial.py
usuario/: admin.py  models.py  serializers.py
usuario/migrations/: 0001_initial.py  0002_usuario_foto.py  0003_usuario_tipo_usuario.py  0004_alter_usuario_tipo_usuario.py
